--- a/bt10-register.html
+++ b/bt10-register.html
@@ -36,7 +36,7 @@
                     <tr>
                         <td>Mật khẩu:</td>
                         <td>
-                            <input type="text" required>
+                            <input type="password" required>
                         </td>
                     </tr>
                     <tr>
