--- a/bt03.html
+++ b/bt03.html
@@ -6,12 +6,12 @@
 </head>
 
 <body>
-    <h2 id="muc-luc">Mục lục</h2>
-    1. <a href="#chuong-1">Chương 1</a>
-    <br>
-    2. <a href="#chuong-2">Chương 2</a>
-    <br>
-    3. <a href="#chuong-3">Chương 3</a>
+    <h1 id="muc-luc">Mục lục</h1>
+    <ol>
+        <li><a href="#chuong-1">Chương 1</a></li>
+        <li><a href="#chuong-2">Chương 2</a></li>
+        <li><a href="#chuong-3">Chương 3</a></li>
+    </ol>
 
     <h2 id="chuong-1">Chương 1</h2>
     <a href="#muc-luc">Về mục lục</a>
