--- a/bt07.html
+++ b/bt07.html
@@ -6,25 +6,25 @@
 </head>
 
 <body>
-    <img src="./images/map.gif" alt="" usemap="#map">
+    <img src="./images/bando.jpg" alt="" usemap="#map">
     <map name="map">
         <area
             shape="circle"
-            coords="256, 181, 15"
+            coords="377, 251, 10"
             href="https://hanoi.gov.vn/home"
             target="_blank"
             title="Cổng thông tin điện tử Hà Nội"
         >
         <area
             shape="poly"
-            coords="358,460, 403,491, 358,502, 334,485, 358,460"
+            coords="511,665, 581,717, 538,739, 516,735, 482,708, 489,697, 481,687, 500,681, 511,665"
             href="http://www.thuathienhue.gov.vn/vi-vn/"
             target="_blank"
             title="Cổng thông tin điện tử Huế"
         >
         <area
             shape="rect"
-            coords="289,824, 327,869"
+            coords="410,1199, 446,1244"
             href="http://www.hochiminhcity.gov.vn/Pages/default.aspx"
             target="_blank"
             title="Cổng thông tin điện tử Thành phố Hồ Chí Minh"
