--- a/bt10-register.html
+++ b/bt10-register.html
@@ -76,7 +76,7 @@
                     <tr>
                         <td>Quy định khi tham gia diễn đàn</td>
                         <td>
-                            <textarea cols="30" rows="5">Bài viết phải nghiêm túc, không chứa quảng cáo, không có nội dung phản cảm</textarea>
+                            <textarea cols="30" rows="5" readonly>Bài viết phải nghiêm túc, không chứa quảng cáo, không có nội dung phản cảm</textarea>
                         </td>
                     </tr>
                     <tr>
