--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <h2 style="text-align: center;">Danh mục sách</h2>
     <div style="text-align: center;">
         <div style="display: inline-block;">
-            <h3><a href="./web.html">HTML</a></h3>
+            <h3><a href="./templates/html/web.html">HTML</a></h3>
             <img src="./images/html.jpg" width="120px" height="180px">
         </div>
         <div style="display: inline-block;">
-            <h3><a href="./css.html">CSS</a></h3>
+            <h3><a href="./templates/css/css.html">CSS</a></h3>
             <img src="./images/css.jpg" width="120px" height="180px">
         </div>
         <div style="display: inline-block;">
-            <h3><a href="./javascript.html">Javascript</a></h3>
+            <h3><a href="./templates/js/javascript.html">Javascript</a></h3>
             <img src="./images/javascript.jpg" width="120px" height="180px">
         </div>
         <div style="display: inline-block;">
-            <h3><a href="./jquery.html">jQuery</a></h3>
+            <h3><a href="./templates/jquery/jquery.html">jQuery</a></h3>
             <img src="./images/jQuery.jpg" width="120px" height="180px">
         </div>
     </div>
